# TBoptc

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
tboptc/: __init__.py  __main__.py  _version.py
tboptc/calc/: optical_cond.py
tboptc/dptbapi/: __init__.py  hr2dhk.py
tboptc/entrypoints/: main.py  run.py
tboptc/fortran/: ac_cond.f90
tboptc/utils/: argcheck.py  constants.py  loggers.py  tools.py
test/Si/: POSCAR  results.npy  sub.sh  task.json
